--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
     <p>NIM:222511035</p>
     <p>Nama:Yulianti Aprilia</p>
     <img src="yuli.jpg" alt="Foto Profil">
+    <img src="1.jpg" alt="Foto Profil">
+    <img src="2.jpg" alt="Foto Profil">
+    <img src="3.jpg" alt="Foto Profil">
+    <img src="4.jpg" alt="Foto Profil">
+    <img src="5.jpg" alt="Foto Profil">
 </body>
 </html>
