--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="3.jpg" alt="Foto Profil">
     <img src="4.jpg" alt="Foto Profil">
     <img src="5.jpg" alt="Foto Profil">
-    <img src="6.jpg" alt="Foto Profil">
+    <img src="6.png" alt="Foto Profil">
         <img src="7.jpg" alt="Foto Profil">
         <img src="8.jpg" alt="Foto Profil">
         <img src="9.jpg" alt="Foto Profil">
